# AutoInvo

./: .gitignore  JINJA2_TEMPLATES.md  README.md  pyproject.toml
src/autoinvo/: __init__.py  core.py  delivery.py  generators.py  importers.py  storage.py
src/autoinvo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autoinvo/core/: __init__.py  autoinvo.py
src/autoinvo/importers/: __init__.py  contracts.py  csv_importer.py  exceptions.py  models.py  service.py  xlsx_importer.py
src/autoinvo/pdf/: contracts.py  exceptions.py  generator.py  models.py  weasyprint_engine.py
src/autoinvo/templates/: __init__.py  contracts.py  service.py
templates/: corporate-invoice.html  corporate-invoice.jinja2  index.html  minimal-invoice.html  minimal-invoice.jinja2  modern-invoice.html  modern-invoice.jinja2
tests/: test_autoinvo_imports.py  test_csv_importer.py  test_import_service.py  test_jinja2_templates.py  test_pdf.py  test_templates.py  test_xlsx_importer.py
tests/examples/: generate_invoice.py  render_jinja2_invoices.py
