[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoinvo"
version = "0.1.0"
description = "Automated invoice generation library with dynamic templates, custom mapping, and SMTP delivery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools to look inside the src directory